--- a/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
+++ b/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
@@ -9,12 +9,7 @@
 </head>
 
 <body style="text-align: center;">
-	<h2>
-		{% if result %}
-		{{result}}
-		{% endif %}
-
-	</h2>
+	
 	<div <section>
 
 		<div class="grid ">
@@ -72,9 +67,14 @@
 		<br>
 		<p id="par"></p>
 		</section>
-
+		<h2>
+			{% if result %}
+			{{result}}
+			{% endif %}
+	
+		</h2>
 		<p id="par"></p>
-
+	</div>
 		<script type="text/javascript">
 			var k = "Entered symptons are ";
 			function Geeks() {
