Added Database and Doctor Suggestion Feature

--- a/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
+++ b/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
@@ -66,8 +66,8 @@
             </div>
             <div class="flex mt-10 space-x-5">
                 <button type="button" class="bg-white text-blue-900 px-6 py-2 hover:brightness-105 font-semibold">Diagnostic Center</Center></button>
-                <button
-                    class="bg-blue-900 text-white border-2 border-white px-6 py-2 hover:brightness-105 font-semibold">Second Advice</button>
+                <a href="/api/secondAdvice/"><button
+                    class="bg-blue-900 text-white border-2 border-white px-6 py-2 hover:brightness-105 font-semibold">Second Advice</button></a>
 
             </div>
         </div>
