--- a/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
+++ b/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
@@ -23,19 +23,18 @@
                                 class="hover:underline  underline-offset-4 decoration-2 decoration-cyan-500 py-2 rounded-lg px-2 md:px-5">
                                 <a href="#">Home</a>
                             </li>
-                            <li class="hover:underline underline-offset-4 decoration-2 dec">
-                                <a href="#">Contact</a>
+                            <li class="hover:underline  underline-offset-4 decoration-2 decoration-cyan-500 py-2 rounded-lg px-2 md:px-5">
+                                <a href="#sectionContact">Contact</a>
+                            </li>
+                            <li
+                                class="hover:underline  underline-offset-4 decoration-2 decoration-cyan-500 py-2 rounded-lg px-2 md:px-5">
+                                <a href="#sectionPatners">Patners</a>
                             </li>
                             <li
                                 class="hover:underline underline-offset-4 decoration-2 decoration-cyan-500 py-2 rounded-lg px-2 md:px-5">
-                                <a href="#">Services</a>
+                                <a href="#middleServices">Services</a>
                             </li>
-                            <li
-                                class="hover:underline underline-offset-4 decoration-2 decoration-cyan-500 py-2 rounded-lg px-2 md:px-5">
-                                <a href="#">Login</a>
-                                <link href="" login.html" rel="" login">
-                            </li>
-
+                            
                         </ul>
 
                     </div>
@@ -87,7 +86,7 @@
         <script src="https://kit.fontawesome.com/290d4f0eb4.js" crossorigin="anonymous"></script>
     </header>
 
-    <section>
+    <section id="middleServices">
         <div class="flex justify-center  p-4">
             <div class="flex flex-col justify-center items-center ">
                 <div class="text-stone-600  font-medium">Our Services</div>
@@ -163,7 +162,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     </section>
-    <div class="flex justify-center  p-4 bg-gray-900">
+    <div id="sectionPatners" class="flex justify-center  p-4 bg-gray-900">
         <div class="text-white text-3xl md:text-5xl font-medium text-center pd-5px">Our Banking Partners</div>
         <div class="flex justify-center">
             <div class="flex flex-col justify-center items-center "></div>
@@ -263,7 +262,7 @@
     <body>
 
         <footer>
-            <div
+            <div id="sectionContact"
                 class="md:flex hidden bg-white-900 p-3 flex-col text-center pt-5 space-y-8 md:flex-row md:justify-between md:space-y-0">
                 <div
                     class="flex mx-3 justify-between space-x-20 md:flex-row text-black-200 md:space-x-28 md:ml-20 lg:ml-24 lg:space-x-[13rem] xl:space-x-72 xl:ml-24">
