Added Proximity Code

--- a/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
+++ b/second_adviceAPI/DjangoRestAPI/APIProjectFolder/templates/home.html
@@ -70,7 +70,7 @@
 
                     </div>
                     <div class="flex mt-10 space-x-5">
-                        <a href=""><button
+                        <a href="http://127.0.0.1:8001/"><button
                             class="bg-blue-900 text-white border-2 border-white px-6 py-2 hover:brightness-105 font-semibold">Diagnostic
                             Center</button></a>
                         <a href="/leasing/"><button class="bg-white text-blue-900 px-6 py-2 hover:brightness-105 font-semibold">Leasing</Center></button></a>
